--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Dante's Comedìa: a Digital Edition</title>
+  <title>Dante's Comedia: a Digital Edition</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A digital edition of the Comedìa based on TEI XML Format for literary texts">
-  <meta name="author" content="Giuseppe Conti"> 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
