--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Dante's Comedia: a Digital Edition</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="A new digital edition of Dante's Divine Comedy">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
